# chatgpt-discord-bot

./: Cargo.toml
src/: main.rs
